Fixed bottom text and portfolio section spacing

--- a/css/style.css
+++ b/css/style.css
@@ -384,7 +384,7 @@ a {
 
 
 .portfolioSection {
-    margin-top: 120px;
+    margin-top: 320px;
 }
 
 #portfolioContainer {
@@ -512,7 +512,7 @@ a {
 .socialDiv {
     margin: 0 auto;
     width: 80%;
-    margin-top: 75px;
+    margin-top: 45px;
 }
 
 .socialDiv span a {
@@ -538,9 +538,15 @@ footer {
 }
 
 footer p {
+    width: 80%;
+    margin: 0 auto;
     text-align: center;
-    margin: 0;
-    padding-top: 100px;
+    position: absolute;
+    bottom: 40px;
+    left: 0;
+    right: 0;
+    font-size: 0.75em;
+    padding-top: 30px;
 }
 
 /**************************************************************************************************************************************/
